# doit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  justfile  method-workflow.md
.dev/: taskrc.example
.github/workflows/: ci.yml
docs/: api.md  self-hosting.md
public/: app.js  index.html  no-due-mockup.html  style.css
scripts/: seed-dev-tasks.sh
src/: main.rs
