[package]
name = "doit"
version = "0.1.0"
edition = "2021"
description = "Mobile-friendly web UI for Taskwarrior task capture and completion"
license = "MIT"
repository = "https://github.com/Portavion/doit"
readme = "README.md"
keywords = ["taskwarrior", "taskchampion", "tasks", "todo"]
categories = ["command-line-utilities", "web-programming::http-server"]
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["compression-br", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
